<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MasteringtheFundamentals1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">OK</string>
    <string name="something">Type Here!</string>
    <string name="numEntryLabel"># Entries</string>
    <string name="avgLengthLabel">Average Length</string>
    <string name="numEntry">0</string>
    <string name="avgLength">0</string>
    <string-array name="mobileOS">
        <item>Android</item>
        <item>Blackberry</item>
        <item>iOS</item>
        <item>Windows Phone</item>
        <item>Blackberry</item>
        <item>iOS2</item>
        <item>Windows2 Phone</item>
        <item>Blac2kberry</item>
        <item>iO1S</item>
        <item>Wi21ndows Phone</item>
    </string-array>

</resources>
